--- a/week2/index.html
+++ b/week2/index.html
@@ -5,5 +5,7 @@
     <title>Metal or Bust Coffee Co</title>
     </head>
     <body>
+        <h1>Metal or Bust Coffee Co</h1>
+    Welcome Traveller 
     </body>
 </html>
