--- a/week3/index.html
+++ b/week3/index.html
@@ -5,8 +5,38 @@
     <title>Metal or Bust Coffee Co</title>
     </head>
     <body>
+        <!-- site header -->
+        <header>
         <h1>Metal or Bust Coffee Co</h1>
-    Welcome Traveller 
+        </header>
+<!-- main content of the paige -->
+    <main>
+        <article>
+            <h2>Our Story</h2>
+            <!-- adding image to the page -->
+            <img src="images/" alt="">
+            <p>
+                This kickass coffee shop was born in Ottawa Ontario. We were founded in 2021 and have been headbanging since. Our goal is to serve you the best cofee and keep your neck breaking
+            </p>
+            <blockquote>
+                Heavy riffs and great coffee <cite>Henry Darling</cite>
+            </blockquote>
+            <!-- <hr> <-- this is a paragraph break -->
+            <hr>
+        </article>
+        <aside>
+            <section>
+                <h3> Merchandise</h3>
+                <!-- adding unordered merch list -->
+                <ul>
+                    <li>T-shirt</li>
+                    <li>Hat</li>
+                    <li>hoodies</li>
+                    <li>fanny packs</li>
+                </ul>
+            </section>
+        </aside>
+    </main>
     </body>
     <hr>
 </html>
