--- a/html-assignemnt/notes.html
+++ b/html-assignemnt/notes.html
@@ -8,5 +8,24 @@
     </head>
     <body>
         <H1>5 Cool HTML tags</H1>
+        <a href="">Home</a>
         <hr>
+        <dl>
+            <dt> <strong>Img</strong></dt>
+            <dd>This allows you to add images</dd>
+            <br>
+            <dt> <strong>Cite</strong></dt>
+            <dd>Lets you give credit to a quote</dd>
+            <br>
+            <dt> <strong>Mark</strong></dt>
+            <dd>This highlights text</dd>
+            <br>
+            <dt> <strong>Hr</strong></dt>
+            <dd>
+                This command puts a line horizontaly throught the page
+            </dd>
+            <br>
+            <dt> <strong>Q</strong></dt>
+            <dd>This allows for small quotations</dd>
+        </dl>
     </body>
