--- a/html-assignemnt/index.html
+++ b/html-assignemnt/index.html
@@ -22,7 +22,7 @@
             <P>
            Outside of school i have a couple of responsibilities. I have a Dog named Heidi, she is a mix of a Labrador, Boxer and Great Dane, she needs to be walked three times a day. I work at Starbucks<sup>TM</sup> as a barista part time. 
            I have a cottage in Quebec that I help my dad take care of. 
-           <a href="henry2086.github.io/html-assignemnt/notes.html"> <strong>5 Cool HTML Tags</strong></a>
+           <a href="henry2086.github.io/html-assignemnt/notes.html" target="_blank">  <strong>5 Cool HTML Tags</strong></a>
             </P>
             <h3>My Favourite Quote</h2>
             <p>
