--- a/html-assignemnt/notes.html
+++ b/html-assignemnt/notes.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <H1>5 Cool HTML tags</H1>
-       <a href="henry2086.github.io/html-assignemnt/index.html" target="_blank"> Home</a> 
+        <p> Go back by clicking the <a href="https://henry2086.github.io/html-assignemnt/index.html" target="_blank">home </a> button </p> 
         <hr>
         <dl>
             <dt> <strong>Img</strong></dt>
