--- a/html-assignemnt/index.html
+++ b/html-assignemnt/index.html
@@ -22,12 +22,15 @@
             <P>
            Outside of school i have a couple of responsibilities. I have a Dog named Heidi, she is a mix of a Labrador, Boxer and Great Dane, she needs to be walked three times a day. I work at Starbucks<sup>TM</sup> as a barista part time. 
            I have a cottage in Quebec that I help my dad take care of. 
-           <a href="/notes.html" target="_blank">5 cool Tags</a>
             </P>
             <h3>My Favourite Quote</h2>
             <p>
             <blockquote>1... 2... 3... GO - <cite>Steve-O</cite></blockquote>
             This quote is from the actor Steve-O, it is about his mentality when approacing <em>daunting</em> or <em>challenging tasks</em>. Once you say go you do it, you dont let yourself think beyond the go and just do the task ahead of you.
             </p> 
+            <hr>
+            <p>
+               Come check out <a href="https://henry2086.github.io/html-assignemnt/notes.html" target="_blank"> 5 Cool HTML Tags!</a>
+            </p>
         </article>
         <footer> Copyright Henry Darling 2021</footer>
