--- a/week4/index.html
+++ b/week4/index.html
@@ -7,13 +7,24 @@
     <body>
         <!-- site header -->
         <header>
-        <h1>Metal or Bust Coffee Co</h1>
+            <h1>Metal or Bust Coffee Co</h1>
+            <!-- adding navigation menu -->
+            <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
         </header>
 <!-- main content of the paige -->
     <main>
+        <!-- adding on page link -->
+        <a href="#merchandise">Merch</a>
         <article>
-            <h2>Our Story</h2>
-            <!-- adding image to the page -->
+        </article>
+        <section>
+        <h2>Our Story</h2>
+        <!-- adding image to the page -->
             <img src="/week4/images/guitar.jpg" alt="guitar sillouhette">
             <p>
                 This kickass coffee shop was born in Ottawa Ontario. We were founded in 2021 and have been headbanging since. Our goal is to serve you the best cofee and keep your neck breaking
@@ -21,11 +32,49 @@
             <blockquote>
                 Heavy riffs and great coffee <cite>Henry Darling</cite>
             </blockquote>
+            <a href="https://polyphia.com/" target="_blank">Band Of The Week</a>
+        </section>
             <!-- <hr> <-- this is a paragraph break -->
             <hr>
-        </article>
-        <aside>
             <section>
+                <h3>GrindCore Brews</h3>
+                    <table border>
+                    <thead>
+                        <tr>
+                            <th colspan="2">Items</th> 
+                            <th rowspan="2">Price</th>                           
+                        </tr>
+                        <tr>
+                            <th>Name</th>
+                            <th>Calories</th>
+                        </tr>
+                        <tbody>
+                            <tr>
+                                <th>Black Metal Brew</th>
+                                <th>50</th>
+                                <th>$2.00</th>
+                            </tr>
+                            <tr>
+                                <th>Post Harcore Heaven</th>
+                                <th>60</th>
+                                <th>$2.00</th>
+                            </tr>
+                            <tr>
+                                <th>Metal Core Medly</th>
+                                <th>100</th>
+                                <th>2.00</th>
+                            </tr>  
+                            <tr>
+                                <th>Cattle Decaffeination</th>
+                                <th>100</th>
+                                <th>2.00</th>
+                            </tr>                         
+                        </tbody>
+                    </thead>
+                </table>             
+            </section>
+        <aside>
+            <section id="merchandise">
                 <h3> Merchandise</h3>
                 <!-- adding unordered merch list -->
                 <ul>
@@ -37,7 +86,8 @@
             </section>
         </aside>
     </main>
+    <hr>
+    <footer>Copyright @ Metal or Bust Coffee Co, 2021</footer>
     </body>
     <hr>
 </html>
-<a href=""></a>
