--- a/week5/index.html
+++ b/week5/index.html
@@ -6,10 +6,10 @@
     <!-- links css file to html file-->
     <link rel="stylesheet" href="css/main.css">
     </head>
-    <body>
+    <body
         <!-- site header -->
         <header>
-        <h1>Metal or Bust Coffee Co</h1>
+        <h1 href>Metal or Bust Coffee Co</h1>
         </header>
 <!-- main content of the paige -->
     <main>
