trying to fix opening in new tab error

--- a/html-assignemnt/index.html
+++ b/html-assignemnt/index.html
@@ -33,7 +33,7 @@
             </p> 
             <hr>
             <p>
-               Come check out <a href="https://henry2086.github.io/html-assignemnt/notes.html" target="_blank"> 5 Cool HTML Tags!</a>
+               Come check out <a href="https://henry2086.github.io/html-assignemnt/notes.html"> 5 Cool HTML Tags!</a>
             </p>
         </article>
         <footer> Copyright Henry Darling 2021</footer>
