--- a/final-project/home.html
+++ b/final-project/home.html
@@ -146,7 +146,7 @@ Video Production
     <p>Commodo ullamco non Lorem sint ut cillum nisi. Reprehenderit dolore dolore culpa fugiat exercitation nostrud incididunt ad deserunt ad. </p>
         </div>  
         <br>
-        <a href="#ourvision" class="boxthree">Web Plans<i class="im im-care-right"></i></a>
+        <a href="#ourvision" class="boxthree">Learn More<i class="im im-care-right"></i></a>
      </section>
      <br>
      <section class="founders">
