creating week 4/making html assingment additions

--- a/week4/index.html
+++ b/week4/index.html
@@ -24,7 +24,7 @@
           <li>Photography</li> 
       </ul>
       Right now I really enjoy bouldering. Bouldering is a type of rock climbing that focuses more on shear strength
-      and technique but does not use ropes. Normally people do not go as high bouldering because of the saftey concerns.  <a href="notes.html">Click Here</a> for a list of some of my favourite html tags!
+      and technique but does not use ropes. Normally people do not go as high bouldering because of the saftey concerns.  <a href="/notes.html">Click Here</a> for a list of some of my favourite html tags!
   </p>
 
 </article>
