--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,6 +10,7 @@
   <!-- website header -->
   <body>
       <h1>Lone Starfish</h1> 
+      <p id="home"></p>
   <article>
       <!-- Navbar -->
   <nav class="navbar">
@@ -19,6 +20,7 @@
   </nav>
   <!-- paragraph 1 -->
   <h2>Life of a Starfish</h2>
+  <p id="story"></p>
   <!-- adding immage in text -->
   <img src="images/lone-starfish.jpg" alt="Starfish" id="starfish">
   <p class="pone">
@@ -38,7 +40,7 @@
   </p>
   <h3>Contact to lean more</h3>
   <!-- adding form to contact -->
-  <p>
+  <p id="contact">
       <div id="textboxes">
       <form action="thanks.html" method="get"></form>
       <label for="name" class="question">Name</label>
